# py-dev

./: .mypy.ini  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
py_dev/: __deps__.py  j2.py  log.py  requirements.txt  run.py
py_dev/ccat/: __main__.py  consts.py  pprn.py
py_dev/dotenv/: __main__.py
py_dev/fmt_conv/: __main__.py  md_txt.py
py_dev/git/: fzf.py  ops.py  spec_parse.py
py_dev/git/commit_time_machine/: __main__.py
py_dev/git/ctm/: __main__.py
py_dev/git/ded/: __main__.py
py_dev/git/diff/: __main__.py
py_dev/git/diff_commits/: __main__.py
py_dev/git/diff_file/: __main__.py
py_dev/git/diff_strings/: __main__.py
py_dev/git/dig_commit_msgs/: __main__.py
py_dev/git/do/: __main__.py
py_dev/git/hub/: __main__.py
py_dev/git/ice_pick/: __main__.py
py_dev/git/ls_blame/: __main__.py
py_dev/git/ls_commits/: __main__.py
py_dev/git/ls_dead/: __main__.py
py_dev/git/ls_reflog/: __main__.py
py_dev/git/lsc/: __main__.py
py_dev/git/pr/: __main__.py
py_dev/git/pull_request/: __main__.py
py_dev/git/recur_submodules/: __main__.py
py_dev/http_echo/: __main__.py  srv.py
py_dev/man/: __main__.py
py_dev/srv/: __main__.py  serve.py  static.py
scripts/: ccat  dotenv  fmt-conv  git-c-tm  git-ctm  git-ded  git-diff-c  git-diff-f  git-diff-s  git-do  git-f-diff  git-hub  git-ls-b  git-ls-c  git-ls-d  git-pr  git-recur  git-remote-ssh  git-sdb  git-show-c  git-ssh  git-ssh-remote  git-sshr  git-tm  git-tm-c  git-use-ssh  git-web  gpr  http-echo  hub  lsc  pullr  srv  woman
(+19 files in other folders)
